Complete site redesign

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,10 +20,6 @@
   width: 50%;
 }
 
-.nav-column {
-  float: left;
-}
-
 .nav-left {
   width: 50%;
   text-align: left;
@@ -35,45 +31,25 @@
   padding-top: 10px;
 }
 
-.column-third {
+.column-half {
   float: left;
 }
 
-.col-third-1 {
-  width: 40%;
-}
-
-.col-third-2 {
+.col-main-half-1 {
   width: 30%;
 }
 
-.col-third-3 {
-  padding-left: 3em;
-  width: 30%;
+.col-main-half-2 {
+  padding: 0 10%;
+  width: 70%;
 }
 
-.col-third-1_listen {
+.col-book-half-1 {
   width: 35%;
 }
 
-.col-third-2_listen {
-  width: 20%;
-}
-
-.col-third-3_listen {
-  width: 45%;
-}
-
-.col-third-1_resources {
-  width: 40%;
-}
-
-.col-third-2_resources {
-  width: 20%;
-}
-
-.col-third-3_resources {
-  width: 40%;
+.col-book-half-2 {
+  width: 65%;
 }
 
 .row:after {
@@ -95,8 +71,10 @@ body {
 }
 
 p {
+  color: #000;
+  font-size: 19px;
   display: block;
-  margin-block-start: 1.35em;
+  margin-block-start: 1em;
   margin-block-end: 1.35em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
@@ -107,88 +85,40 @@ b, strong {
 }
 
 hr {
-  border-width: 0.01em;
-  border-color: rgba(0,0,0,0.25);
-  border-style: solid;
+  background-color: #ccc;
+  border: none;
+  color: #ccc;
+  height: 1px;
+  margin: 2.5em 0;
+}
+
+ol{
+  margin: 0 0 2em;
 }
 
 li{
+  color: 000;
+  padding-left: 10px;
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 300;
   font-size: 19px;
 }
 
+li a{
+  font-weight: 500;
+}
+
 a{
   color: #000;
+  border-bottom: 1px #bbb solid;
   text-decoration: none;
+  transition: .25s;
 }
 
 a:hover{
-  border-bottom: none;
-  color: #fff;
-}
-
-a.cta{
-  color: #fff;
-}
-
-a.cta:hover{
-  color: #fff;
-}
-
-a.title{
-  border-bottom: 1px #ddd solid;
-}
-
-a.title:hover{
   background-color: #ff0048;
   border-bottom: none;
-}
-
-a.record{
-  font-family: "Cardo", serif;
-  border-bottom: 1px #ddd solid;
-}
-
-a.record:hover{
-  background-color: #ff0048;
-  font-family: "Cardo", serif;
-  border-bottom: none;
-}
-
-a.name{
-  color: #000;
-  text-decoration: none;
-  border-bottom: 1px #ddd solid;
-}
-
-a.name:hover{
-  background-color: #ff0048;
   color: #fff;
-  text-decoration: none;
-}
-
-a.resource{
-  font-family: "Cardo", serif;
-  border-bottom: 1px #ddd solid;
-}
-
-a.resource:hover{
-  background-color: #ff0048;
-  font-family: "Cardo", serif;
-  border-bottom: none;
-}
-
-a.event:hover{
-  background-color: #ff0048;
-}
-
-a.publication:hover{
-  background-color: #ff0048;
-}
-
-a.resources-footer:hover{
-  background-color: #ff0048;
 }
 
 .main-content {
@@ -199,62 +129,31 @@ a.resources-footer:hover{
     margin: 1.5em auto 1em;
 }
 
-.main-copy{
-  margin: 3em auto 6em;
-  max-width: 62ch;
-}
-
-.main-copy a{
-  border-bottom: 1px #ddd solid;
-}
-
-.main-copy a:hover{
-  border: 0;
-}
-
-.main-landing{
-  margin: 1em auto 1em;
-  max-width: 1200px;
-}
-
 .main-wrapper{
   color: #777;
 }
 
 .main-inner{
   max-width: 1200px;
-  padding: 3em 0;
+  padding: 0 0 1.5em;
   margin: 0 auto;
 }
 
-.main-inner-top{
-  max-width: 1200px;
-  padding: 3em 0 1.5em;
+.profile{
+  background-color: #F4F4F3;
   margin: 0 auto;
+  color: #000;
+  padding: 2em 2em 1.5em;
+  text-align: center;
+  border-radius: 5px;
+  max-width: 300px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.main-inner-bottom{
-  max-width: 1200px;
-  padding: 2em 0 3em;
-  margin: 0 auto;
-}
-
-.main-list_first{
-  max-width: 1200px;
-  padding: 3em 0 1em;
-  margin: 0 auto;
-}
-
-.main-list_last{
-  max-width: 1200px;
-  padding: 1em 0 6em;
-  margin: 0 auto;
-}
-
-.main-list{
-  max-width: 1200px;
-  padding: 1em 0;
-  margin: 0 auto;
+.book{
+  display: block;
+  margin: 1em 0 15em;
 }
 
 .about{
@@ -267,63 +166,18 @@ a.resources-footer:hover{
   -moz-osx-font-smoothing: grayscale;
 }
 
-.right-nav{
-  text-align: right;
-}
-
-.about a.first{
-  padding-left: 0;
-}
-
-.about a.nav{
-  padding-left: 35px;
-}
-
-.about a{
-  color: #000;
-  font-weight: 400;
-  text-decoration: none;
-}
-
-.about a:hover{
-  color: #ff0048;
-  background: none;
-  text-decoration: none;
-}
-
-.about a.btn{
-  color: #fff;
-  background-color: #ff0048;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  border: 0;
-  margin-left: 35px;
-  border-radius: 50px;
-  padding: 8px 22px;
-}
-
-.about a.btn:hover{
-  background-color: #000;
-  color: #fff;
-}
-
-.about .nav-active{
-  padding-left: 35px;
-  color: #999;
-}
-
 a.btn{
   color: #fff;
   background-color: #ff0048;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
+  font-size: 13px;
+  font-weight: 500;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   border: 0;
   border-radius: 50px;
   padding: 10px 40px;
+  transition: .25s;
 }
 
 a.btn:hover{
@@ -331,9 +185,29 @@ a.btn:hover{
   color: #fff;
 }
 
-.bio{
-  padding-right: 6em;
+a.btn_secondary{
+  color: #000;
+  background-color: #eee;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  border: 0;
+  border-radius: 50px;
+  padding: 10px 40px;
+  transition: .25s;
 }
+
+a.btn_secondary:hover{
+  background-color: #000;
+  color: #fff;
+}
+
+img{
+  max-width: 600px;
+}
+
 
 img.avatar{
   border-radius: 100px;
@@ -342,9 +216,10 @@ img.avatar{
 }
 
 img.book-cover{
+  float: left;
   display: block;
-  width: 200px;
-  margin: 0 0 1.25em;
+  width: 150px;
+  margin: 0 2em 1.25em 0;
   box-shadow: 0 0 3px 0 rgba(40,42,47,0.1), -3px 3px 10px 3px rgba(40,42,47,0.05), -10px 13px 10px 0 rgba(40,42,47,0.1), -3px 3px 3px -1px rgba(40,42,47,0.1);
   -webkit-box-shadow: 0 0 3px 0 rgba(40,42,47,0.1), -3px 3px 10px 3px rgba(40,42,47,0.05), -10px 13px 10px 0 rgba(40,42,47,0.1), -3px 3px 3px -1px rgba(40,42,47,0.1);
   -moz-box-shadow: 0 0 3px 0 rgba(40,42,47,0.1), -3px 3px 10px 3px rgba(40,42,47,0.05), -10px 13px 10px 0 rgba(40,42,47,0.1), -3px 3px 3px -1px rgba(40,42,47,0.1);
@@ -363,10 +238,13 @@ img.book-cover:hover{
 }
 
 a.home-link{
+  background-color: #fff;
+  border: 0;
   transition: .25s;
 }
 
 a.home-link:hover{
+  background-color: #fff;
   opacity: .5;
 }
 
@@ -377,18 +255,29 @@ a.home-link:hover{
   top: 2px;
 }
 
-.name{
-  font-weight: 500;
-}
-
 h1{
-  color: #333;
+  color: #000;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 26px;
-  font-weight: 300;
+  font-size: 32px;
+  font-weight: 500;
   letter-spacing: -0.03em;
   line-height: 1.25;
   display: block;
+  margin-block-start: 0;
+  margin-block-end: .25em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h2{
+  color: #000;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  line-height: 1.25;
   margin-block-start: 0;
   margin-block-end: .5em;
   margin-inline-start: 0;
@@ -397,18 +286,8 @@ h1{
   -moz-osx-font-smoothing: grayscale;
 }
 
-h2{
-  font-family: "Cardo", serif;
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: -0.01em;
-  line-height: 1.5;
-  margin-block-start: 0;
-  margin-block-end: .35em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h2 a{
+  font-weight: 500;
 }
 
 h3{
@@ -421,7 +300,7 @@ h3{
   line-height: 1;
   display: block;
   margin-block-start: .5em;
-  margin-block-end: .5em;
+  margin-block-end: 1em;
   margin-inline-start: 0;
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
@@ -442,12 +321,13 @@ h4{
 }
 
 h5{
+  color: #000;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 400;
   letter-spacing: -0.02em;
   margin-block-start: 0px;
-  margin-block-end: 0.5em;
+  margin-block-end: 1.5em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   -webkit-font-smoothing: antialiased;
@@ -455,182 +335,81 @@ h5{
 }
 
 h6{
-  color: #333;
-  font-family: "Cardo", serif;
-  font-size: 17px;
+  color: #666;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 12px;
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: -0.02em;
   margin-block-start: 0px;
-  margin-block-end: 1.25em;
+  margin-block-end: 2.5em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1.list{
-  color: #333;
+h1.profile-card{
+  color: #000;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 48px;
+  font-size: 22px;
   font-weight: 500;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.025em;
   line-height: 1;
   display: block;
   margin-block-start: 0;
-  margin-block-end: .25em;
+  margin-block-end: 0.25em;
   margin-inline-start: 0;
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h3.list{
+h2.profile-card{
+  color: #666;
   font-family: "IBM Plex Sans", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 18px;
-  letter-spacing: -0.03em;
-  text-transform: none;
-  line-height: 1;
-  display: block;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h5.list{
-  color: #333;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
   letter-spacing: -0.025em;
-  margin-block-start: 0px;
-  margin-block-end: 0.25em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  line-height: 1.35;
+  margin-block-start: 0;
+  margin-block-end: 0.75em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.one{
-  font-weight: 500 !important;
-  color: #ff0048 !important;
-}
-
-h3.list a.section-link{
+h5.profile-card{
   color: #000;
-  border-bottom: 1px #ddd solid;
-}
-
-h3.list a.section-link:hover{
-  color: #fff;
-  background-color: #ff0048;
-  border-bottom: none;
-}
-
-h1.listen{
-  color: #333;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 36px;
-  font-weight: 500;
-  letter-spacing: -0.05em;
-  line-height: 1.25;
-  display: block;
-  margin-block-start: 0;
-  margin-block-end: .5em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h2.listen{
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 19px;
-  font-weight: 400;
-  letter-spacing: -0.01em;
-  line-height: 1;
-  margin-block-start: 0;
-  margin-block-end: .5em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h3.listen{
-  font-family: "IBM Plex Sans", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 48px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  line-height: 1;
-  display: block;
-  margin-block-start: 0;
-  margin-block-end: .5em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h4.listen{
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  letter-spacing: -0.02em;
-  padding-left: 3em;
-  margin-block-start: 0px;
-  margin-block-end: 0px;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h5.listen{
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  letter-spacing: -0.02em;
-  margin-block-start: 0px;
+  letter-spacing: -0.025em;
+  line-height: 1.15;
+  margin-block-start: 0;
   margin-block-end: 0.5em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-h6.listen{
-  color: #333;
-  font-family: "Cardo", serif;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: -0.02em;
-  margin-block-start: 0px;
-  margin-block-end: 1.25em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.social-icon{
+  width: 24px;
 }
 
-a.playlist{
-  color: #000;
-  font-weight: 500;
-  text-decoration: none;
+a.social-link{
+  background-color: none;
+  border-bottom: 0;
+  opacity: 100%;
+  transition: .25s;
 }
 
-a.playlist:hover{
-  color: #ff0048;
-  background: none;
-  text-decoration: none;
+a.social-link:hover{
+  background-color: #F4F4F3;
+  border-bottom: 0;
+  opacity: 50%;
 }
 
 blockquote {
@@ -654,11 +433,19 @@ footer{
   padding: 25px 0;
   text-align: center;
   height: 70px;
+  margin: 5em 0 0 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+footer a{
+  background-color: #f4f4f3;
+  color: #000;
+  border-bottom: 0;
+}
+
 footer a:hover{
+  background-color: #f4f4f3;
   color: #ff0048;
 }
 
@@ -715,48 +502,39 @@ footer a:hover{
 // !-- Medium Screens //
 
 @media screen and (max-width: 1250px) {
-  .main-landing{padding: 0 50px;}
+  .header-pattern{display: none;}
+  .col-main-half-1{padding: 0 0 0 10%; width: 35%;}
+  .col-main-half-2 {padding: 0 10%; width: 65%;}
+  .col-book-half-1 {width: 40%;}
+  .col-book-half-2 {width: 60%;}
+  .book{display: block; margin: 1em 0 16em;}
 }
 
 // !-- Small Screens //
 
 @media screen and (max-width: 1000px) {
   body{font-size: 21px;}
-  .page-header {margin: .25em auto 1em;}
+  .page-header{margin: .25em auto .5em;}
   .column{width: 100%;}
-  .column-third{width: 100%; text-align: center;}
-  .about{margin-bottom: 2em;}
+  .column-half{width: 100%;}
+  .about{text-align: left; margin: 10px 0 0 20px;}
   .nav-left{width: 25%; text-align: left; padding-left: 20px;}
   .nav-right{width: 75%; text-align: right; padding-top: 10px; padding-right: 20px;}
-  .col-third-1{margin-bottom: 1em;}
-  .col-third-2{margin-bottom: 3em;}
-  .col-third-3{padding-left: 0;}
-  .col-third-1_resources{margin-bottom: 1em;}
-  .col-third-2_resources{margin-bottom: 2em;}
-  .col-third-3_resources{padding-left: 0; margin-bottom: 1em;}
-  .main-inner-top{max-width:100%; margin-top: 0; padding:0 0 3em;}
-  .main-inner-bottom{max-width:100%; margin-top: 0; padding:0 0 2em;}
-  .main-landing{margin: 0 auto 1em; max-width: 95%; padding: 0 20px;}
-  .main-list_first{padding: 1em 0 0;}
-  .main-list{padding:0;}
-  .blank{display: none;}
+  .profile{padding: 1em 2em .5em; margin: 0 auto 0;}
   .error{margin: 0 auto; padding: 4em 0; max-width: 85%;}
   .error h1{font-size:80px;}
   .error h2{font-size:20px;}
   .error h5{font-size:16px;}
+  img.avatar{margin: 0 0 10px;}
   .main-page{margin: 1em auto; max-width: 85%;}
-  .about{text-align: center; margin: 0;}
-  .about a.nav{padding-left: 30px;}
-  .about a.first{padding-left: 0;}
-  .about a.home{padding-left: 0;}
-  .about .nav-active{padding-left: 30px;}
-  .bio{max-width: 40ch; padding-right: 0; margin: 2em auto;}
   img.book-cover{width: 200px; margin:0 auto 1.25em;}
+  .book{display: block;margin: 1em 0 29em;}
   h1{font-size: 24px;}
   h2{font-size: 19px;}
   h3{font-size: 12px;}
   h4{font-size: 13px;}
   h5{font-size: 13px;}
+  hr {margin: 1.5em 0;}
   blockquote{font-size: 19px; border-left: #eee 5px solid; padding: 0 0 0 20px; margin-inline-start: 0px; margin-inline-end: 0px;}
   footer{font-size: 12px; padding: 25px 25px; height: 100px;}
 }
