--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,17 @@
   <body>
   {% include nav.html %}
     <main id="content" class="main-content" role="main">
-      <div class="main-landing">
-      {{ content }}
+      <div class="main-wrapper">
+      <div class="main-inner">  
+      <div class="row">
+        <div class="column-half col-main-half-1">
+          {% include profile.html %}
+        </div>
+        <div class="column-half col-main-half-2">
+          {{ content }}
+        </div>  
+      </div>
+      </div>
       </div>
       {% include footer.html %}
     </main>
