--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -517,6 +517,7 @@ footer a:hover{
   .page-header{margin: .25em auto .5em;}
   .column{width: 100%;}
   .column-half{width: 100%;}
+  .col-main-half-1{padding: 0 10% 0 10%;}
   .about{text-align: left; margin: 10px 0 0 20px;}
   .nav-left{width: 25%; text-align: left; padding-left: 20px;}
   .nav-right{width: 75%; text-align: right; padding-top: 10px; padding-right: 20px;}
@@ -528,7 +529,7 @@ footer a:hover{
   img.avatar{margin: 0 0 10px;}
   .main-page{margin: 1em auto; max-width: 85%;}
   img.book-cover{width: 200px; margin:0 auto 1.25em;}
-  .book{display: block;margin: 1em 0 29em;}
+  .book{display: block;margin: 1em 0 30em;}
   h1{font-size: 24px;}
   h2{font-size: 19px;}
   h3{font-size: 12px;}
