Updated LinkedIn link

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -7,6 +7,6 @@
 		<a href="mailto:jeremy@jeremydcherry.com" class="social-link"><img src="/images/email.svg" class="social-icon"></a>
 		<a href="https://www.dribbble.com/jeremydcherry" class="social-link"><img src="/images/dribbble.svg" class="social-icon"></a>
 		<a href="https://jeremydcherry.medium.com" class="social-link"><img src="/images/medium.svg" class="social-icon"></a>
-		<a href="" class="social-link"><img src="/images/linkedin.svg" class="social-icon"></a>
+		<a href="https://www.linkedin.com/in/jeremydcherry/" class="social-link"><img src="/images/linkedin.svg" class="social-icon"></a>
 	</div>
 </div>
