--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 <!--  Essential META Tags -->
 
 <meta property="og:title" content="Jeremy D. Cherry">
-<meta property="og:description" content="Designer, writer, and educator">
+<meta property="og:description" content="Brand & Digital Designer">
 <meta property="og:image" content="https://jeremydcherry.com/images/og-image.png">
 <meta property="og:url" content="jeremydcherry.com">
 <meta name="twitter:card" content="summary">
@@ -25,7 +25,7 @@
 <!--  Non-Essential, But Recommended -->
 
 <meta property="og:site_name" content="Jeremy D. Cherry">
-<meta name="twitter:image:alt" content="Designer, writer, and educator">
+<meta name="twitter:image:alt" content="Brand & Digital Designer">
 
 <title>{{ site.title }} — {{ site.description }}</title>
 
