--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -519,6 +519,7 @@ footer a:hover{
   .error h1{font-size:80px;}
   .error h2{font-size:20px;}
   .error h5{font-size:16px;}
+  img{max-width: 300px;}
   img.avatar{margin: 0 0 10px;}
   .main-page{margin: 1em auto; max-width: 85%;}
   img.book-cover{width: 200px; margin:0 auto 1.25em;}
