--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -511,6 +511,7 @@ footer a:hover{
   .column{width: 100%;}
   .column-half{width: 100%;}
   .col-main-half-1{padding: 0 10% 0 10%;}
+  .col-main-half-2{padding: 5% 10% 0 10%;
   .about{text-align: left; margin: 10px 0 0 20px;}
   .nav-left{width: 25%; text-align: left; padding-left: 20px;}
   .nav-right{width: 75%; text-align: right; padding-top: 10px; padding-right: 20px;}
