--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -72,7 +72,8 @@ body {
 
 p {
   color: #000;
-  font-size: 20px;
+  font-size: 21px;
+  line-height: 1.5;
   display: block;
   margin-block-start: 1em;
   margin-block-end: 1.35em;
