--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,7 +5,7 @@
 		<h2 class="profile-card">Brand &amp; Digital Designer<br/>
 		Charlottesville, VA</h2>
 		<a href="mailto:jeremy@jeremydcherry.com" class="social-link"><img src="/images/email.svg" class="social-icon"></a>
-		<a href="https://jeremydcherry.dribbble.com/" class="social-link"><img src="/images/dribbble.svg" class="social-icon"></a>
+		<a href="https://dribbble.com/jeremydcherry" class="social-link"><img src="/images/dribbble.svg" class="social-icon"></a>
 		<a href="https://jeremydcherry.medium.com" class="social-link"><img src="/images/medium.svg" class="social-icon"></a>
 		<a href="https://www.linkedin.com/in/jeremydcherry/" class="social-link"><img src="/images/linkedin.svg" class="social-icon"></a>
 	</div>
