--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -318,8 +318,8 @@ h4{
 
 h5{
   color: #000;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 16px;
+  font-family: "Cardo", serif;
+  font-size: 17px;
   font-weight: 400;
   letter-spacing: -0.02em;
   margin-block-start: 0px;
