--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,6 +102,9 @@ li{
   padding-left: 10px;
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 300;
+}
+
+li p{
   font-size: 19px;
 }
 
