Updated profile card home link

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,6 +1,6 @@
 <div class="profile-wrapper">
 	<div class="profile">
-		<img src="/images/jeremy-headshot.jpg" class="avatar" alt="Photo of Jeremy D. Cherry"><br/>
+		<a href="/" class="profile-home"><img src="/images/jeremy-headshot.jpg" class="avatar" alt="Photo of Jeremy D. Cherry"></a>
 		<h1 class="profile-card">Jeremy D. Cherry</h1>
 		<h2 class="profile-card">Brand &amp; Digital Designer<br/>
 		Charlottesville, VA</h2>
