--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -544,7 +544,9 @@ footer a:hover{
   img.avatar{margin: 0 0 10px;}
   .main-page{margin: 1em auto; max-width: 85%;}
   img.book-cover{width: 200px; margin:0 auto 1.25em;}
-  .book{display: block;margin: 1em 0 30em;}
+  .book{display: block;margin: 1em 0 32em;}
+  a.btn{padding: 10px 30px;}
+  a.btn_secondary{padding: 10px 30px;}
   p {font-size: 18px;}
   h1{font-size: 26px;}
   h2{font-size: 22px;}
