Update mobile header styles

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -527,7 +527,7 @@ footer a:hover{
 
 @media screen and (max-width: 1000px) {
   body{font-size: 21px;}
-  .page-header{margin: .25em auto .5em;}
+  .page-header{margin: 1em auto 1em;}
   .column{width: 100%;}
   .column-half{width: 100%;}
   .col-main-half-1{padding: 0 10% 0 10%;}
