Updated Profile Card styles

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -379,11 +379,11 @@ h1.profile-card{
 }
 
 h2.profile-card{
-  color: #666;
-  font-family: "IBM Plex Sans", sans-serif;
+  color: #444;
+  font-family: "Cardo", serif;
   font-size: 16px;
   font-weight: 400;
-  letter-spacing: -0.025em;
+  letter-spacing: -0.01em;
   line-height: 1.35;
   margin-block-start: 0;
   margin-block-end: 0.75em;
