--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,6 +102,8 @@ li{
   padding-left: 10px;
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 300;
+  font-size: 19px;
+  line-height: 1.75;
 }
 
 li p{
@@ -147,7 +149,7 @@ a.profile-home:hover{
 }
 
 .main-wrapper{
-  color: #777;
+  color: #000;
 }
 
 .main-inner{
