--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,8 +2,7 @@
 	<div class="profile">
 		<a href="/" class="profile-home"><img src="/images/jeremy-headshot.jpg" class="avatar" alt="Photo of Jeremy D. Cherry"></a>
 		<h1 class="profile-card">Jeremy D. Cherry</h1>
-		<h2 class="profile-card">Brand &amp; Digital Designer<br/>
-		Charlottesville, VA</h2>
+		<h2 class="profile-card">Brand Designer<br/><em>Charlottesville, Virginia</em></h2>
 		<a href="mailto:jeremy@jeremydcherry.com" class="social-link"><img src="/images/email.svg" class="social-icon"></a>
 		<a href="https://dribbble.com/jeremydcherry" class="social-link"><img src="/images/dribbble.svg" class="social-icon"></a>
 		<a href="https://jeremydcherry.medium.com" class="social-link"><img src="/images/medium.svg" class="social-icon"></a>
