--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
  @import "normalize";
 @import "variables";
-@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap');
 
 // !-- Large Screens //
 
@@ -284,6 +284,38 @@ h1{
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1.primary-page-title{
+  color: #000;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 72px;
+  font-weight: 600;
+  letter-spacing: -0.045em;
+  line-height: .85;
+  display: block;
+  margin-block-start: 0;
+  margin-block-end: .3em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1.secondary-page-title{
+  color: #000;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 48px;
+  font-weight: 600;
+  letter-spacing: -0.03em;
+  line-height: 1;
+  display: block;
+  margin-block-start: 0;
+  margin-block-end: .25em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 h2{
   color: #000;
   font-family: "IBM Plex Sans", sans-serif;
@@ -291,6 +323,36 @@ h2{
   font-weight: 500;
   letter-spacing: -0.02em;
   line-height: 1.15;
+  margin-block-start: 0;
+  margin-block-end: .5em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h2.primary-page-title{
+  color: #000;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: -0.02em;
+  line-height: 1.25;
+  margin-block-start: 0;
+  margin-block-end: 1em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h2.secondary-page-title{
+  color: #000;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: -0.02em;
+  line-height: 1.25;
   margin-block-start: 0;
   margin-block-end: .5em;
   margin-inline-start: 0;
