--- a/_includes/home-title.html
+++ b/_includes/home-title.html
@@ -1,5 +1,5 @@
 <h1 class="primary-page-title">Design<br/>with<br/>Purpose</h1>
-<h2 class="primary-page-title">Jeremy D. Cherry</h2><br/>
+<h2 class="primary-page-title">Jeremy D. Cherry</h2>
 <a href="mailto:jeremy@jeremydcherry.com" class="social-link"><img src="/images/email.svg" class="social-icon"></a>
 <a href="https://dribbble.com/jeremydcherry" class="social-link"><img src="/images/dribbble.svg" class="social-icon"></a>
 <a href="https://jeremydcherry.medium.com" class="social-link"><img src="/images/medium.svg" class="social-icon"></a>
