--- a/_layouts/primary.html
+++ b/_layouts/primary.html
@@ -10,7 +10,7 @@
       <div class="main-inner">  
       <div class="row">
         <div class="column-half col-main-half-1">
-          {% include home-title.html %}
+          {% include profile.html %}
         </div>
         <div class="column-half col-main-half-2">
           {{ content }}
