--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -59,7 +59,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: #F4F4F3;
   font-family: "Cardo", serif;
   font-size: 21px;
   font-weight: 400;
@@ -429,7 +429,7 @@ h6{
 h1.profile-card{
   color: #000;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 500;
   letter-spacing: -0.025em;
   line-height: 1;
