--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -159,12 +159,10 @@ a.profile-home:hover{
 }
 
 .profile{
-  background-color: #F4F4F3;
   margin: 0 auto;
   color: #000;
   padding: 2em 2em 1.5em;
-  text-align: center;
-  border-radius: 5px;
+  text-align: left;
   max-width: 300px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
