--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -161,9 +161,8 @@ a.profile-home:hover{
 .profile{
   margin: 0 auto;
   color: #000;
-  padding: 2em 2em 1.5em;
+  padding: 1em 0;
   text-align: left;
-  max-width: 300px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
