--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   {% include head.html %}
   </head>
   <body>
+  {% include nav.html %}
     <main id="content" class="main-content" role="main">
       <div class="main-wrapper">
       <div class="main-inner">  
