--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,2 +1,2 @@
+<h2 class="secondary-page-title">Jeremy D. Cherry</h2>
 <h1 class="secondary-page-title">{{ page.title }}</h1>
-<h2 class="secondary-page-title">{{ page.subtitle }}</h2>
