--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -141,7 +141,7 @@ a.profile-home:hover{
 }
 
 .main-content {
-  margin: 5% auto;
+  margin: 5% auto 0;
 }
 
 .page-header {
@@ -344,7 +344,7 @@ h2.primary-page-title{
 h2.secondary-page-title{
   color: #000;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 300;
   letter-spacing: -0.02em;
   line-height: 1.25;
