secondary button style fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -209,7 +209,7 @@ a.btn_secondary{
   font-weight: 500;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  border: 1 solid #000;
+  border: 1px solid #000;
   border-radius: 50px;
   padding: 10px 40px;
   transition: .25s;
