--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -100,18 +100,14 @@ ol{
 li{
   color: 000;
   padding-left: 10px;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Cardo", serif;
   font-weight: 300;
-  font-size: 19px;
+  font-size: 20px;
   line-height: 1.75;
 }
 
 li p{
-  font-size: 19px;
-}
-
-li a{
-  font-weight: 500;
+  font-size: 20px;
 }
 
 a{
@@ -125,19 +121,6 @@ a:hover{
   background-color: #ff0048;
   border-bottom: none;
   color: #fff;
-}
-
-a.profile-home{
-  background-color: none;
-  border-bottom: 0;
-  opacity: 100%;
-  transition: .25s;
-}
-
-a.profile-home:hover{
-  background-color: #F4F4F3;
-  border-bottom: 0;
-  opacity: 70%;
 }
 
 .main-content {
@@ -184,7 +167,7 @@ a.profile-home:hover{
 
 a.btn{
   color: #fff;
-  background-color: #000;
+  background-color: #EB0042;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -588,24 +571,21 @@ footer a:hover{
   .page-header{margin: 1em auto 1em;}
   .column{width: 100%;}
   .column-half{width: 100%;}
-  .col-main-half-1{padding: 0 10% 0 10%;}
-  .col-main-half-2{padding: 5% 10% 0;}
+  .col-main-half-1{padding: 10% 10% 0 10%;}
+  .col-main-half-2{padding: 2% 10% 0;}
   .about{text-align: left; margin: 10px 0 0 20px;}
   .nav-left{width: 25%; text-align: left; padding-left: 20px;}
   .nav-right{width: 75%; text-align: right; padding-top: 10px; padding-right: 20px;}
-  .profile{padding: 1em 2em .5em; margin: 0 auto 0;}
+  .profile{padding: 0 2em 0; margin: 0 auto 0;}
   .error{margin: 0 auto; padding: 4em 0; max-width: 85%;}
   .error h1{font-size:80px;}
   .error h2{font-size:20px;}
   .error h5{font-size:16px;}
   img{max-width: 100%;}
-  img.avatar{margin: 0 0 10px;}
   .main-page{margin: 1em auto; max-width: 85%;}
-  img.book-cover{width: 200px; margin:0 auto 1.25em;}
-  .book{display: block;margin: 1em 0 32em;}
   a.btn{padding: 10px 30px;}
   a.btn_secondary{padding: 10px 20px;}
-  p {font-size: 18px;}
+  p {font-size: 20px;}
   h1{font-size: 26px;}
   h2{font-size: 22px;}
   h3{font-size: 20px; line-height: 1.5;}
