--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,17 +20,6 @@
   width: 50%;
 }
 
-.nav-left {
-  width: 50%;
-  text-align: left;
-}
-
-.nav-right {
-  width: 50%;
-  text-align: right;
-  padding-top: 10px;
-}
-
 .column-half {
   float: left;
 }
@@ -150,21 +139,6 @@ a:hover{
   -moz-osx-font-smoothing: grayscale;
 }
 
-.book{
-  display: block;
-  margin: 1em 0 15em;
-}
-
-.about{
-  margin: 0 50px;
-  color: #999;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 a.btn{
   color: #fff;
   background-color: #EB0042;
@@ -181,7 +155,7 @@ a.btn{
 }
 
 a.btn:hover{
-  background-color: #555;
+  background-color: #000;
   color: #fff;
 }
 
@@ -205,30 +179,6 @@ a.btn_secondary:hover{
 
 img{
   max-width: 660px;
-}
-
-
-img.avatar{
-  border-radius: 100px;
-  width: 130px;
-  margin: 0 0 10px;
-}
-
-img.book-cover{
-  float: left;
-  display: block;
-  width: 150px;
-  margin: 0 2em 1.25em 0;
-  box-shadow: 0 0 3px 0 rgba(40,42,47,0.1), -3px 3px 10px 3px rgba(40,42,47,0.05), -10px 13px 10px 0 rgba(40,42,47,0.1), -3px 3px 3px -1px rgba(40,42,47,0.1);
-  -webkit-box-shadow: 0 0 3px 0 rgba(40,42,47,0.1), -3px 3px 10px 3px rgba(40,42,47,0.05), -10px 13px 10px 0 rgba(40,42,47,0.1), -3px 3px 3px -1px rgba(40,42,47,0.1);
-  -moz-box-shadow: 0 0 3px 0 rgba(40,42,47,0.1), -3px 3px 10px 3px rgba(40,42,47,0.05), -10px 13px 10px 0 rgba(40,42,47,0.1), -3px 3px 3px -1px rgba(40,42,47,0.1);
-  transition: .25s;
-}
-
-img.book-cover:hover{
-  box-shadow: 0 0 4px 0 rgba(40,42,47,0.15), -4px 4px 10px 4px rgba(40,42,47,0.075), -12px 18px 12px 0 rgba(40,42,47,0.15), -4px 4px 4px -1px rgba(40,42,47,0.15);
-  -webkit-box-shadow: 0 0 4px 0 rgba(40,42,47,0.15), -4px 4px 10px 4px rgba(40,42,47,0.075), -12px 18px 12px 0 rgba(40,42,47,0.15), -4px 4px 4px -1px rgba(40,42,47,0.15);
-  -moz-box-shadow: 0 0 4px 0 rgba(40,42,47,0.15), -4px 4px 10px 4px rgba(40,42,47,0.075), -12px 18px 12px 0 rgba(40,42,47,0.15), -4px 4px 4px -1px rgba(40,42,47,0.15);
 }
 
 .mark{
@@ -340,8 +290,8 @@ h2.secondary-page-title{
 
 h3{
   color: #000;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 22px;
+  font-family: "Cardo", sans-serif;
+  font-size: 20px;
   font-weight: 400;
   letter-spacing: -0.02em;
   line-height: 1.25;
@@ -351,10 +301,6 @@ h3{
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-h3 a{
-  font-weight: 500;
 }
 
 h4{
@@ -428,21 +374,6 @@ h2.profile-card{
   line-height: 1.35;
   margin-block-start: 0;
   margin-block-end: 0.75em;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h5.profile-card{
-  color: #000;
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: -0.025em;
-  line-height: 1.15;
-  margin-block-start: 0;
-  margin-block-end: 0.5em;
   margin-inline-start: 0;
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
@@ -574,8 +505,6 @@ footer a:hover{
   .col-main-half-1{padding: 10% 10% 0 10%;}
   .col-main-half-2{padding: 2% 10% 0;}
   .about{text-align: left; margin: 10px 0 0 20px;}
-  .nav-left{width: 25%; text-align: left; padding-left: 20px;}
-  .nav-right{width: 75%; text-align: right; padding-top: 10px; padding-right: 20px;}
   .profile{padding: 0 2em 0; margin: 0 auto 0;}
   .error{margin: 0 auto; padding: 4em 0; max-width: 85%;}
   .error h1{font-size:80px;}
