--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -490,9 +490,6 @@ footer a:hover{
   .header-pattern{display: none;}
   .col-main-half-1{padding: 0 0 0 10%; width: 35%;}
   .col-main-half-2 {padding: 0 10%; width: 65%;}
-  .col-book-half-1 {width: 40%;}
-  .col-book-half-2 {width: 60%;}
-  .book{display: block; margin: 1em 0 16em;}
 }
 
 // !-- Small Screens //
@@ -505,7 +502,7 @@ footer a:hover{
   .col-main-half-1{padding: 10% 10% 0 10%;}
   .col-main-half-2{padding: 2% 10% 0;}
   .about{text-align: left; margin: 10px 0 0 20px;}
-  .profile{padding: 0 2em 0; margin: 0 auto 0;}
+  .profile{padding: 0 0 0; margin: 0 auto 0;}
   .error{margin: 0 auto; padding: 4em 0; max-width: 85%;}
   .error h1{font-size:80px;}
   .error h2{font-size:20px;}
