Updated manifesto styling

--- a/_includes/title-sub.html
+++ b/_includes/title-sub.html
@@ -1,3 +1,3 @@
-<h1 class="secondary-page-title">{{ page.title }}</h1>
-<p>{{ page.subtitle }}</p>
-<h2 class="secondary-page-title"><a href="/">Jeremy D. Cherry</a></h2>
+<h1 class="manifesto-page-title">{{ page.title }}</h1>
+<h2 class="manifesto-page-title">{{ page.subtitle }}</h2>
+<h3 class="manifesto-page-title"><a href="/">Jeremy D. Cherry</a></h3>
