--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -243,6 +243,22 @@ h1.secondary-page-title{
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1.manifesto-page-title{
+  color: #000;
+  font-family: "Cardo", sans-serif;
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: -0.03em;
+  line-height: 1;
+  display: block;
+  margin-block-start: 0;
+  margin-block-end: .25em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 h2{
   color: #000;
   font-family: "IBM Plex Sans", sans-serif;
@@ -260,7 +276,7 @@ h2{
 
 h2.primary-page-title{
   color: #000;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Cardo", sans-serif;
   font-size: 24px;
   font-weight: 400;
   letter-spacing: -0.02em;
@@ -288,11 +304,42 @@ h2.secondary-page-title{
   -moz-osx-font-smoothing: grayscale;
 }
 
+h2.manifesto-page-title{
+  color: #000;
+  font-family: "Cardo", sans-serif;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 300;
+  letter-spacing: -0.02em;
+  line-height: 1.25;
+  margin-block-start: 0;
+  margin-block-end: .5em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 h3{
   color: #000;
   font-family: "Cardo", sans-serif;
   font-size: 20px;
   font-weight: 400;
+  letter-spacing: -0.02em;
+  line-height: 1.25;
+  margin-block-start: 0;
+  margin-block-end: .5em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h3.manifesto-page-title{
+  color: #000;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
   letter-spacing: -0.02em;
   line-height: 1.25;
   margin-block-start: 0;
