Updates styling and formatting

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -307,13 +307,13 @@ h2.secondary-page-title{
 h2.manifesto-page-title{
   color: #000;
   font-family: "Cardo", sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   font-style: italic;
   font-weight: 300;
   letter-spacing: -0.02em;
   line-height: 1.25;
   margin-block-start: 0;
-  margin-block-end: .5em;
+  margin-block-end: 1em;
   margin-inline-start: 0;
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
