--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -427,6 +427,17 @@ h2.profile-card{
   -moz-osx-font-smoothing: grayscale;
 }
 
+.manifesto{
+  color: #000;
+  font-size: 33px;
+  line-height: 1.35;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1.35em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
 .social-icon{
   width: 24px;
 }
