--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -576,6 +576,7 @@ footer a:hover{
   h4{font-size: 12px;}
   h5{font-size: 16px;}
   h6{font-size: 12px;}
+  .manifesto{font-size: 22px;}
   hr {margin: 1.5em 0;}
   blockquote{font-size: 19px; border-left: #eee 5px solid; padding: 0 0 0 20px; margin-inline-start: 0px; margin-inline-end: 0px;}
   footer{font-size: 12px; padding: 25px 25px; height: 100px;}
