--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -64,8 +64,8 @@ p {
   font-size: 20px;
   line-height: 1.5;
   display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
+  margin-block-start: 0;
+  margin-block-end: 5%;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
