Changed css margin

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -359,8 +359,8 @@ h4{
   text-transform: uppercase;
   line-height: 1;
   display: block;
-  margin-block-start: .5em;
-  margin-block-end: 1em;
+  margin-block-start: 0;
+  margin-block-end: 3%;
   margin-inline-start: 0;
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
