Fixed manifesto margin

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -432,8 +432,8 @@ h2.profile-card{
   font-size: 33px;
   line-height: 1.5;
   display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1.35em;
+  margin-block-start: 3%;
+  margin-block-end: 4%;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
