--- a/_includes/manifesto-title.html
+++ b/_includes/manifesto-title.html
@@ -1,3 +1,4 @@
+<img src="/images/hope.svg" class="header-symbol">
 <h1 class="manifesto-page-title">Brands<br/><em>are</em> Human</h1>
 <h2 class="manifesto-page-title">A manifesto for making meaning</h2>
 <h3 class="manifesto-page-title"><a href="/">Jeremy D. Cherry</a></h3>
