--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -557,7 +557,7 @@ footer a:hover{
   .page-header{margin: 1em auto 1em;}
   .column{width: 100%;}
   .column-half{width: 100%;}
-  .col-main-half-1{padding: 10% 10% 0 10%;}
+  .col-main-half-1{padding: 10% 10% 10% 10%;}
   .col-main-half-2{padding: 2% 10% 0;}
   .about{text-align: left; margin: 10px 0 0 20px;}
   .profile{padding: 0 0 0; margin: 0 auto 0;}
@@ -569,7 +569,7 @@ footer a:hover{
   .main-page{margin: 1em auto; max-width: 85%;}
   a.btn{padding: 10px 30px;}
   a.btn_secondary{padding: 10px 20px;}
-  p {font-size: 20px;}
+  p {font-size: 20px; margin-block-end: 8%;}
   h1{font-size: 26px;}
   h2{font-size: 22px;}
   h3{font-size: 20px; line-height: 1.5;}
