--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,2 +1,2 @@
 <h1 class="secondary-page-title">{{ page.title }}</h1>
-<h2 class="secondary-page-title"><a href="/">Jeremy D. Cherry</a></h2>
+<h2 class="secondary-page-title">by <a href="/">Jeremy D. Cherry</a></h2>
